# fsst

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  fuzz.yml  miri.yml  release-plz.yml
benches/: compress.rs  dracula.txt  micro.rs  toy.rs
examples/: file_compressor.rs  round_trip.rs  throughput_fast.rs  throughput_slow.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compress.rs  fuzz_train.rs
src/: builder.rs  fsst.rs  lib.rs  longest.rs  lossy_pht.rs
src/find_longest/: mod.rs  naive.rs
tests/: correctness.rs
tests/fixtures/: art_of_war.txt  declaration.txt
