[package]
name = "fsst-rs"
version = "0.4.4"
description = "Pure-Rust implementation of Fast Static Symbol Tables algorithm for string compression"
authors = ["SpiralDB Developers <hello@spiraldb.com>"]
license = "Apache-2.0"
repository = "https://github.com/spiraldb/fsst"
edition = "2021"

[lib]
name = "fsst"

[lints.rust]
warnings = "deny"
missing_docs = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
if_then_some_else_none = { level = "deny" }
mem_forget = { level = "deny" }
or_fun_call = "deny"
panic_in_result_fn = { level = "deny" }
same_name_method = { level = "deny" }
tests_outside_test_module = { level = "deny" }
unwrap_in_result = { level = "deny" }
use_debug = { level = "deny" }

[dev-dependencies]
criterion = "0.5"
curl = "0.4"

[[example]]
name = "round_trip"
bench = false
test = false

[[bench]]
name = "compress"
harness = false

[[bench]]
name = "micro"
harness = false

[[test]]
name = "correctness"
test = true
bench = false
