[package]
name = "fsst-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.fsst-rs]
path = ".."

[[bin]]
name = "fuzz_train"
path = "fuzz_targets/fuzz_train.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_compress"
path = "fuzz_targets/fuzz_compress.rs"
test = false
doc = false
bench = false
